--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/optOneBtn"
-        android:title="Option1"/>
+        android:title="Opción1"/>
     <item
         android:id="@+id/optOneBtn2"
-        android:title="Option2"/>
+        android:title="Opción2"/>
     <item
-        android:title="Option3"/>
+        android:title="Opción3"/>
     <item
-        android:title="Option4"/>
+        android:title="Opción4"/>
     <item
-        android:title="Option5"/>
+        android:title="Opción5"/>
 </menu>
