--- a/app/src/main/res/layout/activity_publish_report.xml
+++ b/app/src/main/res/layout/activity_publish_report.xml
@@ -67,51 +67,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/report_description" />
 
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="0dp"
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="33dp"
-        android:layout_marginLeft="24dp"
-        android:background="@color/colorAccent"
-        android:text="Cancelar"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnPhotoChoose"
-        app:layout_constraintVertical_bias="0.984" />
-
-    <Button
-        android:id="@+id/btnEnviar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="33dp"
-        android:layout_marginRight="16dp"
-        android:background="@color/colorAccent"
-        android:text="Enviar"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnPhotoChoose"
-        app:layout_constraintVertical_bias="0.988" />
-
-    <Button
-        android:id="@+id/btnPhotoChoose"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
+        android:background="@color/bg_camera_color"
+        app:srcCompat="@android:drawable/ic_menu_camera"
         android:layout_marginTop="16dp"
-        android:background="@color/report_title_bg_color"
-        android:padding="5dp"
-        android:text="Agregar foto"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/show_date" />
+        app:layout_constraintTop_toBottomOf="@+id/show_date"
+        android:layout_marginLeft="24dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
