--- a/app/src/main/res/layout/activity_publish_report.xml
+++ b/app/src/main/res/layout/activity_publish_report.xml
@@ -37,7 +37,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:padding="7dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:gravity="top|start"
         android:hint="@string/report_desc_hint"
         android:inputType="textMultiLine"
@@ -68,15 +68,50 @@
         app:layout_constraintTop_toBottomOf="@+id/report_description" />
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/bg_camera_color"
-        app:srcCompat="@android:drawable/ic_menu_camera"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/show_date"
+        android:id="@+id/btnTakePicture"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="24dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:background="@color/colorAccent"
+        android:contentDescription="@string/image_camera"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/show_date"
+        app:srcCompat="@drawable/ic_camera" />
+
+    <Button
+        android:id="@+id/btnPublish"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="100dp"
+        android:text="@string/publicar"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:background="@color/colorAccent"
+        app:layout_constraintHorizontal_bias="0.59"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnTakePicture" />
+
+    <TextView
+        android:id="@+id/txtNotice"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="24dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="@string/publish_notice"
+        android:textColor="#757575"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPublish" />
 
 
 </android.support.constraint.ConstraintLayout>
