--- a/app/src/main/res/layout/activity_publish_report.xml
+++ b/app/src/main/res/layout/activity_publish_report.xml
@@ -37,7 +37,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:padding="7dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:gravity="top|start"
         android:hint="@string/report_desc_hint"
         android:inputType="textMultiLine"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:textSize="18sp"
         android:background="@drawable/border"
         android:onClick="datePicker"
@@ -72,7 +72,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="24dp"
         android:background="@color/colorAccent"
         android:contentDescription="@string/image_camera"
@@ -86,16 +86,16 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="100dp"
         android:text="@string/publicar"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         android:background="@color/colorAccent"
-        app:layout_constraintHorizontal_bias="0.59"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnTakePicture" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageTaken" />
 
     <TextView
         android:id="@+id/txtNotice"
@@ -103,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="@string/publish_notice"
@@ -111,7 +111,24 @@
         android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnPublish" />
+        app:layout_constraintTop_toBottomOf="@+id/btnPublish"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginBottom="16dp" />
+
+    <ImageView
+        android:id="@+id/imageTaken"
+        android:layout_width="0dp"
+        android:layout_height="130dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/image_taken"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnTakePicture"
+        app:srcCompat="@android:drawable/ic_menu_report_image" />
 
 
 </android.support.constraint.ConstraintLayout>
