Added about activity, modified options menu, add even listener for option menu click.

--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/optOneBtn"
-        android:title="Opción1"/>
-    <item
-        android:id="@+id/optOneBtn2"
-        android:title="Opción2"/>
-    <item
-        android:title="Opción3"/>
-    <item
-        android:title="Opción4"/>
-    <item
-        android:title="Opción5"/>
+        android:id="@+id/optAbout"
+        android:title="@string/about"/>
 </menu>
