--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -28,22 +28,38 @@
             android:textSize="22sp"
             android:textStyle="bold"
             android:text="@string/activities"/>
+
+
     </FrameLayout>
+
+    <ProgressBar
+        android:id="@+id/loadingActivities"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="111dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="125dp"
+        app:layout_constraintTop_toBottomOf="@+id/flayout_top"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        android:visibility="invisible"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.501" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_activity_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:background="#ECEFF1"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/flayout_top"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginBottom="8dp" />
-
+        app:layout_constraintTop_toBottomOf="@+id/flayout_top" />
 
 </android.support.constraint.ConstraintLayout>
