--- a/app/src/main/res/layout/card_activity_report.xml
+++ b/app/src/main/res/layout/card_activity_report.xml
@@ -76,14 +76,35 @@
 
             <TextView
                 android:id="@+id/txtDistance"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="9dp"
                 android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
                 android:textColor="#808080"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/reportLocationIcon"
                 tools:text="0.5 km" />
+
+            <ImageView
+                android:id="@+id/reportTimeIcon"
+                android:layout_width="0dp"
+                android:layout_height="19dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/txtTime"
+                card_view:srcCompat="@drawable/ic_timer" />
+
+            <TextView
+                android:id="@+id/txtTime"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:text="5 días" />
 
         </android.support.constraint.ConstraintLayout>
 
