--- a/app/src/main/res/layout/card_activity_report.xml
+++ b/app/src/main/res/layout/card_activity_report.xml
@@ -25,17 +25,14 @@
                 android:id="@+id/txtReportType"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:textAllCaps="true"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
+                tools:textColor="@color/assault_color"
+                android:textSize="12sp"
                 android:textStyle="bold"
-                app:layout_constraintLeft_toRightOf="@+id/txtType"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:background="@color/assault_color"
                 tools:text="Asalto" />
 
             <TextView
@@ -50,19 +47,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtReportType"
-                tools:text="Asalto a mano armada, hombre resultó herido. alsdkafdajdf ad sflaksdfasdkf alsdkfasdlf asdfas" />
-
-            <TextView
-                android:id="@+id/txtType"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Tipo"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                tools:text="Asalto a mano armada, hombre resultó herido." />
 
             <ImageView
                 android:id="@+id/reportLocationIcon"
