--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -9,12 +9,12 @@
     <FrameLayout
         android:id="@+id/flayout_top"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@color/report_title_bg_color"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingStart="16dp"
-        android:paddingTop="10dp"
+        android:paddingTop="5dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,10 +24,11 @@
             android:id="@+id/txt_title_action"
             android:layout_width="match_parent"
             android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:text="@string/activities"
             android:textColor="@android:color/white"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:text="@string/activities"/>
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
 
     </FrameLayout>
