--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="colorAccent">#009688</color>
     <color name="fab_assault_color">#00796B</color>
     <color name="fab_theif_color">#00796B</color>
-    <color name="assault_color">#f44336</color>
-    <color name="theif_color">#FF5722</color>
+    <color name="assault_color">#f1453d</color>
+    <color name="theif_color">#fd9727</color>
     <color name="report_title_bg_color">#fd9727</color>
     <color name="bg_camera_color">#fd9727</color>
 </resources>
