--- a/app/src/main/res/layout/card_activity_report.xml
+++ b/app/src/main/res/layout/card_activity_report.xml
@@ -49,11 +49,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/txtReportType"
                 tools:text="Asalto a mano armada, hombre resultó herido." />
 
-            <TextView
+            <!--<TextView
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:id="@+id/txtFullReportDescription"
-                android:visibility="invisible" />
+                android:visibility="invisible" />-->
 
             <ImageView
                 android:id="@+id/reportLocationIcon"
